# AI

./: .gitignore  README.md  pyproject.toml  readme.md
docs/: invariant.md
scripts/: run_demo.py
subject/: __init__.py  attention.py  composer.py  core.py  crystallizer.py  demo.py  exporter.py  reader.py
subject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_attention.py  test_cli.py  test_composer.py  test_core.py  test_crystallizer.py  test_exporter.py  test_reader.py
