[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subject"
version = "0.1.0"
description = "Subject demo package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
subject-demo = "subject.demo:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
